@@ -574,6 +574,9 @@ Storage* DOMWindow::sessionStorage() const
     if (!page)
         return 0;
 
+    if (!page->settings()->sessionStorageEnabled())
+        return 0;
+
     RefPtr<StorageArea> storageArea = page->sessionStorage()->storageArea(document->securityOrigin());
 #if ENABLE(INSPECTOR)
     page->inspectorController()->didUseDOMStorage(storageArea.get(), false, m_frame);
